# randy_pitcher_workspace__tabular

./: .gitignore
guides/: dataproc_setup_guide.ipynb
guides/dataproc_serverless/: Dockerfile  Makefile  Pipfile  dataproc_serverless_guide.ipynb
guides/pyiceberg/: pyiceberg_guide.ipynb
guides/pyiceberg_cdc_automation/: Pipfile  pyiceberg_tabular_cdc_guide.ipynb
guides/pyiceberg_duckdb/: Pipfile  pyiceberg_duckdb.ipynb
guides/pyiceberg_polars/: Pipfile  pyiceberg_polars_guide.ipynb
guides/snowflake_mirroring/pyiceberg_native/: pyiceberg_mirror_to_snowflake.ipynb  pyproject.toml
guides/tabular_autoload/: readme.md
guides/tabular_autoload_csv/: square_bagel.csv  tabular_autoload_csv_from_s3.py
guides/tabular_autoload_json/: tabular_autoload_from_s3.py
guides/tabular_iceberg_decorruption/: Iceberg Table Decorruption.ipynb  Tabular Support Logs.ipynb
randy-pitcher-workspace--file-loader/: handler.py  package-lock.json  package.json  serverless.yml
serverless-datagen/: handler.py  package-lock.json  package.json  serverless.yml
shadowtraffic-datagen/: .gitignore  Makefile  docker-compose.yml
shadowtraffic-datagen/debezium/: Dockerfile  debezium-connector.json  deploy_debezium_connector.sh
shadowtraffic-datagen/postgres/: Dockerfile  init.sql
shadowtraffic-datagen/shadowtraffic/: config.json  kafka-config.json  local-watch.sh  pg-config.json
shadowtraffic-datagen/tabular-sink/: connect-standalone.properties  get_iceberg_sink_kafka_connector.sh  tabular-sink.properties
shadowtraffic-datagen/tabular_connector/: Dockerfile  debezium-connector.json  (+7 more)
(+6 files in other folders)
