[tool.poetry]
name = "pyiceberg-native"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.11.8"
pyiceberg = {extras = ["pyarrow"], version = "^0.6.0"}
snowflake = "^0.7.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
